iindex.html modified

--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>title</title>
+    <title>Best title ever</title>
   </head>
 <body>
+	<h1>My super header 1!</h1>
 </body>
 </html>
